--- a/consumerapp/build.gradle
+++ b/consumerapp/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "30.0.0"
 
     defaultConfig {
-        applicationId "com.belajar.mynotesapp"
+        applicationId "com.belajar.consumerapp"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
